@@ -2707,3 +2707,4 @@
 ( cvs diff -u -r 1.213.2.150 -r 1.213.2.151 src/folder.c;  cvs diff -u -r 1.87.2.44 -r 1.87.2.45 src/folder.h;  cvs diff -u -r 1.2.2.21 -r 1.2.2.22 src/folder_item_prefs.c;  cvs diff -u -r 1.2.2.10 -r 1.2.2.11 src/folder_item_prefs.h;  cvs diff -u -r 1.207.2.168 -r 1.207.2.169 src/folderview.c;  cvs diff -u -r 1.179.2.176 -r 1.179.2.177 src/imap.c;  cvs diff -u -r 1.1.2.47 -r 1.1.2.48 src/imap_gtk.c;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/imap_gtk.h;  cvs diff -u -r 1.101.2.39 -r 1.101.2.40 src/news.c;  cvs diff -u -r 1.2.2.23 -r 1.2.2.24 src/news_gtk.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/news_gtk.h;  cvs diff -u -r 1.52.2.41 -r 1.52.2.42 src/prefs_folder_item.c;  cvs diff -u -r 1.43.2.77 -r 1.43.2.78 src/toolbar.c;  cvs diff -u -r 1.19.2.20 -r 1.19.2.21 src/toolbar.h;  cvs diff -u -r 1.12.2.22 -r 1.12.2.23 src/plugins/dillo_viewer/dillo_viewer.c;  ) > 2.10.0cvs51.patchset
 ( cvs diff -u -r 1.2.2.24 -r 1.2.2.25 src/news_gtk.c;  ) > 2.10.0cvs52.patchset
 ( cvs diff -u -r 1.115.2.160 -r 1.115.2.161 src/main.c;  ) > 2.10.0cvs53.patchset
+( cvs diff -u -r 1.5.2.18 -r 1.5.2.19 src/statusbar.c;  ) > 2.10.0cvs54.patchset
