@@ -1,3 +1,8 @@
+2007-07-23 [colin]	2.10.0cvs54
+
+	* src/statusbar.c
+		Maemo: Fix sticking statusbars
+
 2007-07-22 [colin]	2.10.0cvs53
 
 	* src/main.c
